# hayakoe

./: .gitignore  README.en.md  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  README.zh.md  pyproject.toml
.github/workflows/: publish-docs.yaml  publish.yml
dev-tools/: benchmark_gpu_onnx.py  export_onnx.py  test_stream.py
dev-tools/cli/: app.py  main.py
dev-tools/cli/benchmark/: menu.py  report.py  runner.py
dev-tools/cli/export/: exporter.py  menu.py
dev-tools/cli/i18n/: __init__.py
dev-tools/cli/publish/: credentials.py  menu.py
dev-tools/cli/report/: generator.py  menu.py
dev-tools/cli/training/: config_editor.py  dataset.py  menu.py  preprocessing.py  runner.py  tensorboard.py
dev-tools/cli/ui/: console.py  prompts.py
dev-tools/preprocess/: config.py  server.py
dev-tools/preprocess/api/: classification.py  dataset.py  media.py  review.py  speakers.py  videos.py
dev-tools/preprocess/frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dev-tools/preprocess/services/: classification.py  dataset.py  ffmpeg.py  pipeline.py  separator.py  speakers.py  transcription.py  vad.py  video_manager.py
docs/: CLAUDE.md  index.md  package-lock.json  package.json  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  style.css
docs/benchmarks/memory/: run_all.sh  run_one.py
docs/deep-dive/: architecture.md  arm64.md  bert-gpu.md  contributing.md  duration-predictor.md  glossary.md  index.md  onnx-optimization.md  openjtalk-dict.md  source-abstraction.md
docs/deploy/: backend.md  docker.md  fastapi.md  index.md
docs/en/: index.md
docs/en/deep-dive/: architecture.md  arm64.md  bert-gpu.md  contributing.md  duration-predictor.md  glossary.md  index.md  onnx-optimization.md  openjtalk-dict.md  source-abstraction.md
docs/en/deploy/: backend.md  docker.md  fastapi.md  index.md
docs/en/faq/: index.md
docs/en/quickstart/: benchmark.md  custom-words.md  first-voice.md  index.md  install.md  parameters.md  streaming.md
docs/en/training/: data-prep.md  index.md  publish.md  quality-check.md  training.md  troubleshooting.md
docs/faq/: index.md
docs/ja/: index.md
docs/ja/deep-dive/: architecture.md  arm64.md  bert-gpu.md  contributing.md  duration-predictor.md  glossary.md  index.md  onnx-optimization.md  openjtalk-dict.md  source-abstraction.md
docs/ja/deploy/: backend.md  docker.md  fastapi.md  index.md
docs/ja/faq/: index.md
docs/ja/quickstart/: benchmark.md  custom-words.md  first-voice.md  index.md  install.md  (+2 more)
docs/quickstart/: benchmark.md  custom-words.md  first-voice.md  index.md  install.md  parameters.md  streaming.md
docs/training/: data-prep.md  index.md  publish.md  quality-check.md  training.md  troubleshooting.md
docs/zh/: index.md
docs/zh-CN/: index.md
docs/zh-TW/: index.md
hayakoe/: __init__.py  constants.py  logging.py  tts_model.py  voice.py
hayakoe/api/: audio_result.py  resources.py  sources.py  speaker.py  tts.py
hayakoe/models/: attentions.py  commons.py  hyper_parameters.py  infer.py  infer_onnx.py  models_jp_extra.py  modules.py  monotonic_alignment.py
hayakoe/nlp/: __init__.py  bert_models.py
hayakoe/utils/: stdout_wrapper.py  strenum.py  subprocess.py
(+139 files in other folders)
