[project]
name = "hayakoe"
version = "0.0.9"
description = "HayaKoe — Fast ONNX-optimized Japanese TTS based on Style-Bert-VITS2"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0"
authors = [
    { name = "LemonDouble" },
]

dependencies = [
    # Core
    "transformers>=5.0",
    "numpy>=2.0",
    "pydantic==2.12.5",
    "loguru==0.7.3",
    "huggingface-hub>=0.20",
    "onnxruntime>=1.17",
    # NLP - Japanese
    "lemon-pyopenjtalk-prebuilt==0.0.9",
    "pyworld-prebuilt==0.3.5.post2",
    "num2words==0.5.14",
    "numba==0.65.0",
]

[project.optional-dependencies]
gpu = [
    # torch는 CUDA 버전에 따라 별도 설치 필요:
    #   pip install torch --index-url https://download.pytorch.org/whl/cu126
    "safetensors>=0.4",
]
s3 = [
    # s3:// 스킴으로 모델 소스를 지정할 때 필요.
    # S3-호환 엔드포인트(MinIO, R2 등)는 AWS_ENDPOINT_URL_S3 env 로 설정.
    "boto3>=1.26",
]

[project.urls]
Source = "https://github.com/LemonDouble/hayakoe"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hayakoe"]

[tool.hatch.build.targets.sdist]
only-include = [
    "hayakoe",
    "LGPL_LICENSE",
    "LICENSE",
    "pyproject.toml",
    "README.md",
]

[tool.ruff]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[dependency-groups]
dev = [
    # 전처리 서버
    "fastapi>=0.135.3",
    "python-multipart>=0.0.24",
    "uvicorn>=0.44.0",
    "soundfile>=0.13.1",
    # 전처리 ML (torch는 CUDA 버전에 맞게 별도 설치)
    "librosa>=0.11",
    "openai-whisper>=20240930",
    "audio-separator>=0.29",
    # 학습
    "tensorboard>=2.20.0",
    "torchaudio>=2.11.0",
    "pyannote-audio>=3.3",
    # CLI
    "typer>=0.15",
    "InquirerPy>=0.3.4",
    "rich>=13.0",
    # Task runner
    "poethepoet>=0.30",
]

[tool.poe.tasks]
preprocess = { cmd = "python dev-tools/preprocess/server.py", help = "전처리 GUI 서버 실행 (기본: http://localhost:8000)" }
cli = { cmd = "python dev-tools/cli/main.py", help = "학습·품질 리포트·배포용 인터랙티브 CLI 실행" }
